# tec2hdf5

./: .gitignore  Cargo.toml  build.rs  out.csv
doc/: main.tex  proof-pt2.nb  proof.nb
examples/: 00_sol_sphere.tec  myhyst.tec
src/: geometry.rs  hdf5_io.rs  hysteresis_loops.rs  lib.rs  linalg.rs  loop_compute.rs  loop_parser.rs  main.rs  mesh.rs  tecplot.lalrpop  tecplot_parser.rs
test_data/basic_01_zones/: expected_mx_00.txt  expected_my_00.txt  expected_mz_00.txt  expected_submesh_ids.txt
test_data/basic_1_zone/: expected_elements.txt  expected_x.txt  expected_y.txt  expected_z.txt
test_data/basic_loop_file/: basic1.loop  basic2.loop  basic3.loop
test_data/basic_one_zone/: expected_floats_zone_1.txt  expected_ints_zone_1.txt
test_data/histo_02_zones/: example.tec
test_data/histo_2_zones/: expected_elements.txt  expected_mx_0.txt  expected_mx_1.txt  expected_my_0.txt  expected_my_1.txt  expected_mz_0.txt  expected_mz_1.txt  expected_x.txt  expected_y.txt  expected_z.txt
test_data/histo_41_zones/: example.tec
test_data/histo_two_zones/: expected_floats_zone_1.txt  expected_floats_zone_2.txt  expected_ints_zone_1.txt
