[package]
name = "tec2hdf5"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.5.26", features=["derive"]}
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
regex = {version = "1.11.1"}
csv = {version = "1.3.1"}
ndarray = {version = "0.15.6"}
serde = { version = "1.0.217", features = ["derive"] }

[build-dependencies]
lalrpop = "0.22.0"
